<resources>
    <string name="app_name">Student_Project</string>
    <string name="title_of_the_project">Title of the Project</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="contact_no">Contact No.</string>
    <string name="enter_your_contact_no">Enter Your Contact NO.</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="textview">TextView</string>
</resources>